# website-kaliatech-media

./: .gitattributes  .gitignore  README.md
kt-media-processor/: Cargo.toml
kt-media-processor/src/: lib.rs  main.rs
kt-media-processor/src/model/: mod.rs  model.rs
kt-media-processor/src/processor/: clean_dst_dir.rs  config.rs  ffmpeg.rs  generate_filename.rs  mod.rs  process_album.rs  process_file.rs  process_file_image.rs  process_file_video.rs  process_input_meta.rs  scan_input_dir.rs
kt-media-processor/src/processor/ffmpeg/: ffprobe_meta.rs  tests.rs
kt-media-processor/src/scanner/: apply_album_meta_jsons.rs  apply_file_meta_jsons.rs  mod.rs  scan_input_dir.rs
kt-media-processor/src/sync/: mod.rs  sync.rs
kt-media-processor/src/utils/: collect_files.rs  glob_files.rs  mod.rs  parse_args.rs  read_object_from_json_file.rs  serialize_datetime.rs
kt-media-processor/src/watcher/: mod.rs  watch_changes.rs
kt-media-root/: album-meta.json
kt-media-root/folder1/subfolderb/: album-meta.json
kt-media-root/random/2002/: album-meta.json
kt-media-root/random/2003/: album-meta.json
kt-media-root/random/2004/: album-meta.json
kt-media-root/random/2005/: album-meta.json
kt-media-root/random/2006/: album-meta.json
kt-media-root/random/2007/: album-meta.json
kt-media-root/random/2008/: album-meta.json
kt-media-root/random/2009/: album-meta.json
kt-media-root/random/2010/: album-meta.json
kt-media-root/random/2011/: album-meta.json
kt-media-root/random/2012/: album-meta.json
kt-media-root/random/2013/: album-meta.json
kt-media-root/random/2014/: album-meta.json
kt-media-root/random/2015/: album-meta.json
kt-media-root/random/2016/: album-meta.json
(+29 files in other folders)
