[package]
name = "kt-media-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
image = {version = "0.25.1", features = ["avif-native"]}
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.119"
