[package]
name = "kt-media-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
env_logger = "0.11.3"
image = { version = "0.25.1", features = ["avif-native"] }
indexmap = { version = "2.2.6", features = ["serde"] }
log = "0.4.22"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
s3sync = "1.5.0"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.119"
tempdir = "0.3.7"
tokio = "1.38.0"
